feature: feeds can keep epsiodes removed from RSS (#3)
* feature: feeds can keep epsiodes removed from RSS

* fix: clean log lines
